--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Delivroo",
         "heroicons",
-        "tailwindcss"
+        "reactnative",
+        "tailwindcss",
+        "webdev"
     ]
 }
