--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/plugin-transform-react-jsx": "^7.18.10",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@sanity/client": "^3.3.3",
+    "@sanity/image-url": "^1.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "gitmoji-cli": "^5.0.3",
