--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.3.0",
     "gitmoji-cli": "^5.0.3",
     "react": "17.0.2",
+    "react-currency-format": "^1.1.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-heroicons": "^2.2.0",
